# Astraea

./: .gitignore  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/: full-system-UAT.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-RESEARCH.md  01-UAT.md  01-VERIFICATION.md
.planning/phases/02-source-parsing/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  (+16 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/astraea/: __init__.py
tests/integration/: test_submission_readiness.py
tests/test_classification/: test_classifier.py  test_heuristic.py
tests/test_cli/: test_app.py  test_classify.py  test_parse_ecrf.py
tests/test_io/: test_sas_reader.py  test_xpt_writer.py
tests/test_llm/: __init__.py  test_client.py
tests/test_models/: test_classification.py  test_ecrf.py  test_mapping.py  test_mapping_origin.py  test_metadata.py
tests/test_parsing/: test_ecrf_parser.py  test_form_dataset_matcher.py  test_pdf_extractor.py
tests/test_profiling/: test_profiler.py  test_profiler_unit.py
tests/test_reference/: test_controlled_terms.py  test_new_codelists.py  test_sdtm_ig.py
tests/test_transforms/: test_ascii_validation.py  test_char_length.py  test_dates.py  test_epoch.py  test_imputation.py  test_recoding.py  test_sequence.py  test_study_day.py  test_usubjid.py  test_visit.py
(+415 files in other folders)
