[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astraea-sdtm"
version = "0.1.0"
description = "Agentic AI system for mapping raw clinical trial data to CDISC SDTM format"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Astraea Team" },
]

dependencies = [
    "pyreadstat>=1.3.3",
    "pandas>=2.2",
    "numpy>=1.26",
    "pydantic>=2.10",
    "typer>=0.15",
    "rich>=13.9",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "anthropic",
    "langgraph",
    "langchain-anthropic",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
astraea = "astraea.cli.app:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
